name:                reflex-jexcel
version:             0.1.0.0
synopsis:            Reflex jExcel
description:         Please see README.md
homepage:            http://github.com/atidot/ux/reflex/reflex-jexcel
license:             MIT
license-file:        LICENSE
tested-with:         GHCJS == 8.2.2
author:              Atidot Ltd
maintainer:          devops@atidot.com
copyright:           Copyright Atidot Ltd 2016
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.JExcel
                     , Reflex.JExcel.Types
                     , Reflex.JExcel.Types.Types
                     , Reflex.JExcel.Types.Default
                     , Reflex.JExcel.Types.Lens
                     , Reflex.JExcel.Types.Json
                     , Reflex.JExcel.FFI
                     , Reflex.JExcel.JExcel
  build-depends:       base
                     , lens
                     , derive
                     , bytestring
                     , text
                     , time
                     , aeson
                     , aeson-qq
                     , containers
                     , data-default
                     , jsaddle
                     , ghcjs-dom
                     , reflex
                     , reflex-dom

  ghc-options:         -O2 -Wall -Werror
  default-language:    Haskell2010

executable reflex-jexcel-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , lens
    , time
    , text
    , bytestring
    , containers
    , reflex-dom
    , reflex-utils
    , reflex-jexcel
  default-language: Haskell2010


source-repository head
  type:     git
  location: https://github.com/atidot/reflex-widgets
