name:                reflex-jsoneditor
version:             0.1.0.0
synopsis:            Reflex JSONEditor
description:         Please see README.md
homepage:            http://github.com/atidot/ux/reflex/reflex-widget-chartjs
license:             MIT
license-file:        LICENSE
tested-with:         GHCJS == 8.2.2
author:              Atidot Ltd
maintainer:          devops@atidot.com
copyright:           Copyright Atidot Ltd 2016
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.JsonEditor
                     , Reflex.JsonEditor.Types
                     , Reflex.JsonEditor.Types.Types
                     , Reflex.JsonEditor.Types.Lens
                     , Reflex.JsonEditor.Types.Default
                     , Reflex.JsonEditor.Types.Json
                     , Reflex.JsonEditor.JsonEditor
                     , Reflex.JsonEditor.FFI
  build-depends:       base
                     , lens
                     , text
                     , aeson
                     , derive
                     , containers
                     , data-default
                     , jsaddle
                     , ghcjs-dom
                     , reflex-dom

  ghc-options:         -O2 -Wall -Werror
  default-language:    Haskell2010

executable reflex-jsoneditor-exe
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded
  build-depends:
      base >=4.7 && <5
    , lens
    , time
    , text
    , data-default
    , aeson
    , bytestring
    , reflex-dom
    , reflex-utils
    , reflex-jsoneditor
  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/atidot/reflex-widgets
