name:                reflex-mdl
version:             0.1.0.0
synopsis:            Reflex MDL
description:         Please see README.md
homepage:            http://github.com/atidot/ux/reflex/reflex-widget-chartjs
license:             MIT
license-file:        LICENSE
tested-with:         GHCJS == 8.2.2
author:              Atidot Ltd
maintainer:          devops@atidot.com
copyright:           Copyright Atidot Ltd 2016
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.MDL
                     , Reflex.MDL.Common
                     , Reflex.MDL.Layout
                     , Reflex.MDL.Drawer
                     , Reflex.MDL.Tooltip
                     , Reflex.MDL.Snackbar
                     , Reflex.MDL.Progress
                     , Reflex.MDL.Radio
                     , Reflex.MDL.Text
                     , Reflex.MDL.Table
                     , Reflex.MDL.Chip
                     , Reflex.MDL.Icon
                     , Reflex.MDL.Dialog
                     , Reflex.MDL.Button
                     , Reflex.MDL.Grid
                     , Reflex.MDL.Menu
                     , Reflex.MDL.Select
                     , Reflex.MDL.Sidebar
  build-depends:       base
                     , text
                     , aeson
                     , ghcjs-base
                     , ghcjs-dom-jsffi
                     , reflex
                     , reflex-dom
                     , containers
                     , data-default
                     , lens

  ghc-options:         -O2 -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/atidot/reflex-widgets
