name:                reflex-select2
version:             0.1.0.0
synopsis:            Reflex Widget Select2
description:         Please see README.md
homepage:            http://github.com/atidot/ux/reflex/reflex-widget-select2
license:             MIT
license-file:        LICENSE
tested-with:         GHCJS == 8.2.2
author:              Atidot Ltd
maintainer:          devops@atidot.com
copyright:           Copyright Atidot Ltd 2016
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Select2.Types.Types
                     , Reflex.Select2.Types.Lens
                     , Reflex.Select2.Types.Default
                     , Reflex.Select2.Types.Json
                     , Reflex.Select2.Types
                     , Reflex.Select2.FFI
                     , Reflex.Select2.Select2

  build-depends:       base
                     , lens
                     , mtl
                     , bytestring
                     , text
                     , containers
                     , dependent-map
                     , derive
                     , data-default
                     , aeson
                     , aeson-qq
                     , jsaddle
                     , ghcjs-dom
                     , reflex
                     , reflex-dom
                     , ref-tf
  ghc-options:         -O2 -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/atidot/reflex-widgets
