name:                reflex-utils
version:             0.1.0.0
synopsis:            Reflex JSONEditor
description:         Please see README.md
homepage:            http://github.com/atidot/ux/reflex/reflex-widget-chartjs
license:             MIT
license-file:        LICENSE
tested-with:         GHCJS == 8.2.2
author:              Atidot Ltd
maintainer:          devops@atidot.com
copyright:           Copyright Atidot Ltd 2016
category:            Other
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex.Utils.Arbitrary
                     , Reflex.Utils.Display
                     , Reflex.Utils.Load
                     , Reflex.Utils.Utils
                     , Reflex.Utils.Dom
                     , Reflex.Utils.Image
                     , Reflex.Utils
  build-depends:       base
                     , text
                     , filepath
                     , aeson
                     , lens
                     , derive
                     , containers
                     , data-default
                     , ghcjs-base
                     , ghcjs-dom-jsffi
                     , reflex
                     , reflex-dom
                     , QuickCheck

  ghc-options:         -O2 -Wall -Werror
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/atidot/reflex-widgets
